--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ button {
 }
 .cover {
   height: 500px;
-  background-image: url(/images/donation1.jpg);
+  background-image: url(images/donation1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
