--- a/style.css
+++ b/style.css
@@ -136,11 +136,11 @@ footer {
   text-align: center;
   padding: 5px;
 }
-#be{
+#be {
   color: #fc8c8c;
   font-style: italic;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
-#do{
+#do {
   color: #b3b3b3;
 }
